<resources>
    <string name="app_name">client</string>
    <string name="action_settings">Settings</string>
    <string name="fra_news_edit">编辑</string>
    <string name="finish">完成</string>
    <string name="loadding">正在加载中...</string>
    <string name="load_fail">加载失败,点击重新加载</string>
    <string name="image_see">图片浏览</string>
    <string name="all_columns">所有栏目</string>
    <string name="home">首页</string>
    <string name="welfare">图片</string>
    <string name="video">直播</string>
    <string name="mine">我的</string>

    <string name="transition_name">transitionName</string>
    <string name="islive">正在直播</string>


    <string name="location">所在地</string>
    <string name="affective">情感状态</string>
    <string name="age">年龄</string>
    <string name="personal_data">个人资料</string>
    <string name="notice">直播公告</string>



</resources>
