<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/videoContent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorDark">

        <RelativeLayout
            android:id="@+id/frameVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <SurfaceView
                android:id="@+id/sv_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


            <ProgressBar
                android:id="@+id/pb_load"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/dp_5"
                 />
            <TextView
                android:id="@+id/tv_percent"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                tools:text="4545"
                android:layout_below="@id/pb_load"
                />

        </RelativeLayout>

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            android:src="@mipmap/ic_back" />

        <ImageView
            android:id="@+id/ivShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:clickable="true"
            android:visibility="gone"
            tools:src="@drawable/ic_launcher" />

        <RelativeLayout
            android:id="@+id/rl_room_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_room_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/iv_full_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp"
                android:clickable="true"
                android:src="@drawable/selector_full" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/sv_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="@dimen/dp_10">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_favicon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_6"
            android:layout_marginTop="@dimen/dp_10"
            app:civ_border_color="@color/colorDark"
            app:civ_border_width="1dp"
            tools:src="@mipmap/ic_favicon" />

        <TextView
            android:id="@+id/tv_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_toRightOf="@+id/iv_favicon"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/dp_20"
            tools:text="hgjkhg" />

        <TextView
            android:id="@+id/tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_favicon"
            android:layout_toRightOf="@+id/iv_favicon"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/dp_13"
            tools:text="直播号：4545" />

        <View
            android:layout_width="@dimen/dp_0.5"
            android:layout_height="@dimen/dp_15"
            android:layout_alignBottom="@id/iv_favicon"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_toRightOf="@+id/tv_account"
            android:background="@color/colorDark"></View>

        <TextView
            android:id="@+id/tv_fans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_favicon"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/tv_account"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/dp_13"
            tools:text="粉丝：4545" />

        <View
            android:layout_width="@dimen/dp_0.5"
            android:layout_height="@dimen/dp_15"
            android:layout_alignBottom="@id/iv_favicon"
            android:layout_marginLeft="@dimen/dp_5"
            android:layout_toRightOf="@+id/tv_fans"
            android:background="@color/colorDark"></View>

        <TextView
            android:id="@+id/tv_viewer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/iv_favicon"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_toRightOf="@+id/tv_fans"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/dp_13"
            tools:text="粉丝：4545" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/colorReply"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@mipmap/ic_room_info"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/notice"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="@dimen/dp_10"-->
            <!--android:layout_marginLeft="@dimen/dp_10"-->
            <!--android:layout_marginTop="@dimen/dp_10"-->
            <!--android:drawableLeft="@mipmap/ic_room_notice"-->
            <!--android:drawablePadding="6dp"-->
            <!--android:textColor="@color/colorText"-->
            <!--tools:text="@string/notice" />-->

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/gray_btn_bg_color"></View>

        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:ellipsize="end"
            android:lines="1"
            android:textColor="@color/colorDark" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/colorReply"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableLeft="@mipmap/ic_room_info"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:padding="12dp"
            android:text="@string/personal_data"
            android:textColor="@color/colorText"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/colorReply"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age"
                android:textColor="@color/colorDark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="保密"
                android:textColor="@color/colorText"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/colorReply"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/affective"
                android:textColor="@color/colorDark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvEmotionalState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="保密"
                android:textColor="@color/colorText"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/colorReply"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/location"
                android:textColor="@color/colorDark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="外太空"
                android:textColor="@color/colorText"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:background="@color/colorReply"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="职业"
                android:textColor="@color/colorDark"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvOccupation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="保密"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>